src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>LASH_Active_Payers__c</fullName>
        <label>Active Payers</label>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>LASH_Policy__c.LASH_Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LASH_Active_Primary_Copmmercial_Plan__c</fullName>
        <description>This field gives count of Commercial Active payers with Primary
Req:3246</description>
        <label>Active Primary Copmmercial Plan</label>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Insurance_Type__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Payer_Type_From_Payer__c</field>
            <operation>equals</operation>
            <value>Commercial Insurance</value>
        </summaryFilterItems>
        <summaryForeignKey>LASH_Policy__c.LASH_Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LASH_Active_Primary_Govt_Plan__c</fullName>
        <description>This field gives count of Govt active payers  with Primary
Req:3246</description>
        <label>Active Primary Govt Plan</label>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Insurance_Type__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Payer_Type_From_Payer__c</field>
            <operation>equals</operation>
            <value>Government</value>
        </summaryFilterItems>
        <summaryForeignKey>LASH_Policy__c.LASH_Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LASH_Address_1__c</fullName>
        <label>Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Address_2__c</fullName>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Alternate_Contact_Phone__c</fullName>
        <label>Alternate Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LASH_Alternate_Contact__c</fullName>
        <label>Alternate Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_City__c</fullName>
        <formula>LASH_Zip_Code__r.APS_City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Confidential__c</fullName>
        <label>Confidential</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Educational_Qualification__c</fullName>
        <description>Stores educational qualification</description>
        <label>Educational Qualification</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Facility_Type__c</fullName>
        <description>Type of the facility(e.g.Clinic,Home Health Agency,Pharmacy)</description>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital(Inpatient)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital(Outpatient)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skilled Nursing Facility</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Free_Product_Inventory_Level__c</fullName>
        <label>Free Product Inventory Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_HCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to HCO from Site</description>
        <label>HCO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>HCO</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_HCP_HCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>HCO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (HCO)</relationshipLabel>
        <relationshipName>Accounts2_HCPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_HCP_Off_Label_Certificate_On_File__c</fullName>
        <label>HCP Off-Label Certificate On File?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Household_Income__c</fullName>
        <label>Household Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LASH_Household_Size__c</fullName>
        <label>Household Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_Inventory_Level_Last_Updated__c</fullName>
        <label>Inventory Level Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_IsAccountBestDay__c</fullName>
        <formula>IF(contains( LASH_Account_Best_Day_To_Call__c , CASE( 
MOD(  TODAY() - DATE( 1900, 1, 7 ), 7 ), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
&quot;Saturday&quot; 
)) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAccountBestDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_IsAccountBestTime__c</fullName>
        <formula>IF((  ISPICKVAL(APS_Business_Hours_Start__c , &apos;&apos;) ||ISPICKVAL(APS_Business_Hours_End__c  , &apos;&apos;)) , TRUE,
IF((LASH_Zip_Code__r.Now_in_Zip_Time_Zone__c &gt;Value(MID(Text( APS_Business_Hours_Start__c),1,2)+&apos;.&apos;+MID(Text( APS_Business_Hours_Start__c ),4,2)) &amp;&amp; 
LASH_Zip_Code__r.Now_in_Zip_Time_Zone__c &lt; Value(MID(Text( APS_Business_Hours_End__c ),1,2)+&apos;.&apos;+MID(Text( APS_Business_Hours_End__c ),4,2))),TRUE,FALSE) )</formula>
        <label>IsAccountBestTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Legacy_ID__c</fullName>
        <description>ID from the Legacy system</description>
        <label>Legacy ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is used to lock account</description>
        <inlineHelpText>Field is used to lock account</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Medical_Group__c</fullName>
        <inlineHelpText>Any associations to which this Health Care Organization may belong, a network of healthcare providers or hospitals.</inlineHelpText>
        <label>Medical Group</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_NO_Phone_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phone Avaialble(e.g.true if avaialble,false if not available)</description>
        <label>No Phone Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_NPI_Status__c</fullName>
        <label>NPI Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_National_Payer_ID__c</fullName>
        <label>National Payer ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_Ok_to_leave_message__c</fullName>
        <description>Ok to leave a message(e.g.Yes/No)</description>
        <label>Ok to Leave Message</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Other_Name__c</fullName>
        <label>Other Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_PBM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PBM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_PCN__c</fullName>
        <label>PCN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_Patient_Signed_Date__c</fullName>
        <label>Patient Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_Patient_is_Uninsured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient is Uninsured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Payer_Specific_ID__c</fullName>
        <label>Payer Specific ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Payer_Type__c</fullName>
        <description>Type of the Payer (e.g. Commercial Insurance, Government, PBM)</description>
        <label>Payer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Pharmacy_Agreement__c</fullName>
        <label>Pharmacy Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Physician_Signed_Date__c</fullName>
        <label>Physician Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_Preferred_Name__c</fullName>
        <description>Name that a patient prefers</description>
        <label>Preferred Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Prefix__c</fullName>
        <description>Stores prefix value</description>
        <label>Prefix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Prev_Enrollment_End_Date__c</fullName>
        <label>Prev Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_Prev_Renewal_Enrollment_Date__c</fullName>
        <label>Prev Renewal Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_Primary_Diagnosis_Code__c</fullName>
        <label>Primary Diagnosis Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Primary_Diagnosis_Description__c</fullName>
        <label>Primary Diagnosis Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Primary_Language__c</fullName>
        <description>Select the Primary language of the Patient</description>
        <label>Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Private_Commercial_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Commercial Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_QDE_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>QDE External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Receiving_RBC_Transfusions__c</fullName>
        <label>Receiving RBC Transfusions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Referred_By__c</fullName>
        <label>Referred By</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Another Patient/Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Manager/Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer Sponsored Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_SSN__c</fullName>
        <label>SSN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Secondary_Active_Commercial__c</fullName>
        <description>This field gives count of Commercial Active payers with secondary 
Req:3246</description>
        <label>Secondary Active Commercial</label>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Payer_Type_From_Payer__c</field>
            <operation>equals</operation>
            <value>Commercial Insurance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Insurance_Type__c</field>
            <operation>equals</operation>
            <value>Secondary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>LASH_Policy__c.LASH_Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LASH_Secondary_Active__c</fullName>
        <description>This field gives count of Govt Active Payers with Secondary
Req:3246</description>
        <label>Secondary Active Government</label>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Insurance_Type__c</field>
            <operation>equals</operation>
            <value>Secondary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LASH_Policy__c.LASH_Payer_Type_From_Payer__c</field>
            <operation>equals</operation>
            <value>Government</value>
        </summaryFilterItems>
        <summaryForeignKey>LASH_Policy__c.LASH_Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LASH_Secondary_Diagnosis_Code__c</fullName>
        <label>Secondary Diagnosis Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Secondary_Diagnosis_Description__c</fullName>
        <label>Secondary Diagnosis Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Secondary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Site_of_Service__c</fullName>
        <label>Site of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Physician Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Surgical Center</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASH_State__c</fullName>
        <formula>LASH_Zip_Code__r.APS_State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Tertiary_Diagnosis_Code__c</fullName>
        <label>Tertiary Diagnosis Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Tertiary_Diagnosis_Description__c</fullName>
        <label>Tertiary Diagnosis Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Theracom_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Theracom Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Time_Zone__c</fullName>
        <formula>LASH_Zip_Code__r.APS_Time_Zone__c</formula>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Title__c</fullName>
        <description>Description of the Provider(e.g.Physician,Nurse,Doctor)</description>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>ARNP - Advance Registered Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO - Doctor of Osteopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FNP - Family Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Medical Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA - Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN - Registered Nurse</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_US_Resident__c</fullName>
        <label>US Resident</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Zip_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip Code</label>
        <referenceTo>APS_Zip_Code_Master__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_iPAP_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iPAP Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LPS_Current_Platelet_Level_uL__c</fullName>
        <label>Current Platelet Level (/uL)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Adjusted_Gross_Income__c</fullName>
        <label>Adjusted Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Gross_Income__c</fullName>
        <label>Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Household_Net_Income__c</fullName>
        <label>Household Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Income_Sources__c</fullName>
        <label>Income Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Source1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Medical_Expenditure_Amount__c</fullName>
        <label>Medical Expenditure Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonEmail__c</fullName>
        <label>PersonEmail</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>APS_All_Caregivers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PC_EMAIL</columns>
        <columns>PersonEmail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.APS_Caregiver</value>
        </filters>
        <label>All Caregivers</label>
    </listViews>
    <listViews>
        <fullName>APS_All_My_Patients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>APS_Gender__c</columns>
        <columns>APS_Preferred_Contact_Method__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>PC_EMAIL</columns>
        <columns>APS_Home__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.APS_Patients</value>
        </filters>
        <label>All Patients</label>
    </listViews>
    <listViews>
        <fullName>APS_Health_Care_Professionals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>APS_Speciality__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>APS_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.APS_Health_Care_Professionals</value>
        </filters>
        <label>All HCPs</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Payers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.LASH_Payer</value>
        </filters>
        <label>All Payers</label>
    </listViews>
    <listViews>
        <fullName>All_Pharmacies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>APS_Pharmacy_Type__c</columns>
        <columns>APS_Contact_Name__c</columns>
        <columns>APS_Billing_Phone__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Pharmacy</value>
        </filters>
        <label>All Pharmacies</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <description>Account</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Can be deleted</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>HCO</fullName>
        <active>true</active>
        <description>Health Care Organisation</description>
        <label>HCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_Payer</fullName>
        <active>true</active>
        <description>Record Type for Payer</description>
        <label>Payer</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_Site</fullName>
        <active>true</active>
        <description>Record Type for Sites</description>
        <label>Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pharmacy</fullName>
        <active>true</active>
        <label>Pharmacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portal_User</fullName>
        <active>true</active>
        <description>Record type will be used for Portal User dulpication thru its Contacts</description>
        <label>Portal User</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APS_Any_1_Required_In_Home_Mobile_Office</fullName>
        <active>false</active>
        <description>Any of the Home ,Mobile or office should be mandatory.</description>
        <errorConditionFormula>AND( (APS_Data_Source__c &lt;&gt; &quot;Data Entry&quot;), 
if( AND(RecordType.Name = &quot;Patients&quot;  ||  RecordType.Name =&quot;Caregiver&quot;, ISBLANK(APS_Home__c),ISBLANK(APS_Office__c),
 ISBLANK(PersonMobilePhone)),true, false))</errorConditionFormula>
        <errorMessage>Please select any one of Home, Office, Mobile.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Email_Reqd_If_Pref_Con_is_email</fullName>
        <active>true</active>
        <errorConditionFormula>AND( (APS_Data_Source__c &lt;&gt; &quot;Data Entry&quot;), 
if(  AND(RecordType.Name = &quot;Patients&quot;|| RecordType.Name = &quot;Caregiver&quot;,
ISPICKVAL( APS_Preferred_Contact_Method__c ,&quot;Email&quot;),  ISBLANK(PersonEmail)),
true,false ))</errorConditionFormula>
        <errorDisplayField>PersonEmail</errorDisplayField>
        <errorMessage>Please enter value for email field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Fax_Reqd_If_Pref_Con_is_fax</fullName>
        <active>true</active>
        <errorConditionFormula>AND( (APS_Data_Source__c &lt;&gt; &quot;Data Entry&quot;),
if( AND( RecordType.Name = &quot;Patients&quot;|| RecordType.Name = &quot;Caregiver&quot;,
ISPICKVAL( APS_Preferred_Contact_Method__c ,&quot;Fax&quot;), ISBLANK(Fax) ), 
true, false ))</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Please enter value for fax field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_First_Name_Field_Cannot_Be_Null</fullName>
        <active>true</active>
        <description>First Name Field Cannot Be Empty</description>
        <errorConditionFormula>AND(RecordType.Name  = &quot;Patients&quot;,ISBLANK(FirstName),APS_Data_Source__c = &quot;Data Entry&quot; )</errorConditionFormula>
        <errorMessage>Please enter the First Name!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Gender_cannot_be_null</fullName>
        <active>false</active>
        <errorConditionFormula>AND(APS_Data_Source__c &lt;&gt; &quot;Data Entry&quot;,
NOT(RecordType.Name=&apos;Health Care Professionals&apos; ),
NOT(RecordType.Name=&apos;Pharmacy&apos; ),
NOT(RecordType.Name=&apos;Self Registered&apos; ),
ISPICKVAL(APS_Gender__c, &quot;&quot;))</errorConditionFormula>
        <errorMessage>Please select the Gender!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Home_Reqd_If_Pref_Con_is_Home</fullName>
        <active>true</active>
        <description>If Prefered contact method is selected as Home then Home is required.</description>
        <errorConditionFormula>AND( (APS_Data_Source__c &lt;&gt; &quot;Data Entry&quot;),
if( AND( RecordType.Name = &quot;Patients&quot;|| RecordType.Name = &quot;Caregiver&quot;,
ISPICKVAL( APS_Preferred_Contact_Method__c ,&quot;Home&quot;), ISBLANK(APS_Home__c) ), true, false ))</errorConditionFormula>
        <errorDisplayField>APS_Home__c</errorDisplayField>
        <errorMessage>Please enter value for Home</errorMessage>
    </validationRules>
</CustomObject>